<resources>
  <string name="app_name">Note Taker</string>
  <string name="help">About</string>
  <string name="new_note">New Note</string>
  <string name="new_note_title">Title</string>
  <string name="new_note_content">Content</string>
  <string name="feedback">Feedback</string>
  <string name="save_new">Save New</string>
  <string name="drawer_open" />
  <string name="drawer_close" />
  <string name="delete">Delete</string>
  <string name="edit_note">Edit Note</string>
  <string name="save_edited">Save Edited</string>
  <string name="login">Login to Note Taker</string>
  <string name="logout">Logout</string>
  <string name="no_notes">No Notes</string>
  <string name="developed_text">Developed by Sudipto Ghosh</string>
</resources>
