<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".AddNoteActivity">

  <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/appbar_top_add_note_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.appbar.MaterialToolbar
      android:id="@+id/appbar_top_add_note"
      style="@style/Widget.MaterialComponents.Toolbar.Primary"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      app:layout_scrollFlags="scroll|enterAlways|snap"
      app:menu="@menu/top_app_bar_menu_new_note"
      app:title="@string/new_note"
      app:titleTextColor="@android:color/primary_text_dark" />

  </com.google.android.material.appbar.AppBarLayout>

  <EditText
    android:id="@+id/textfield_new_note_title"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:ems="10"
    android:hint="@string/new_note_title"
    android:inputType="textCapSentences"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/appbar_top_add_note_layout"
    android:autofillHints="" />

  <EditText
    android:id="@+id/textfield_new_note_content"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="24dp"
    android:ems="10"
    android:gravity="start|top"
    android:inputType="textMultiLine"
    app:layout_constraintTop_toBottomOf="@+id/textfield_new_note_title"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:hint="@string/new_note_content"
    android:autofillHints="">

  </EditText>
</androidx.constraintlayout.widget.ConstraintLayout>