<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".LoginActivity">

  <com.google.android.material.appbar.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.appbar.MaterialToolbar
      android:id="@+id/appbar_top_login"
      style="@style/Widget.MaterialComponents.Toolbar.Primary"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      app:layout_scrollFlags="scroll|enterAlways|snap"
      app:title="@string/login"
      app:titleTextColor="@android:color/primary_text_dark" />

  </com.google.android.material.appbar.AppBarLayout>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <ImageView
      android:id="@+id/image_note_taker_logo"
      android:layout_width="200dp"
      android:layout_height="200dp"
      android:scaleType="fitXY"
      app:layout_constraintBottom_toTopOf="@+id/app_head"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_chainStyle="packed"
      app:srcCompat="@mipmap/ic_launcher" />

    <TextView
      android:id="@+id/app_head"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/app_name"
      style="@style/TextAppearance.MaterialComponents.Headline3"
      android:textSize="42sp"
      android:textColor="@color/colorPrimary"
      app:layout_constraintBottom_toTopOf="@+id/developed_text"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/image_note_taker_logo" />

    <TextView
      android:id="@+id/developed_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/developed_text"
      android:textSize="16sp"
      style="@style/TextAppearance.MaterialComponents.Body1"
      app:layout_constraintBottom_toTopOf="@+id/button_login"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/app_head" />

    <com.google.android.gms.common.SignInButton
      android:id="@+id/button_login"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
    android:layout_marginTop="24dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/developed_text" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>